# cerebro-red-v2

./: .dockerignore  .env.backup  .env.example  .env.railway  .gitignore  =4.0.0  ADVANCED_FEATURES_IMPLEMENTATION.md  ANALYSE_UND_BEWERTUNG.md  ANLEITUNG_TESTS_AUSFUEHREN.md  API_KEY_FIX.md  BACKEND_START_ANLEITUNG.md  BUG_REPORT_AND_TRAYCER_PROMPT.md  BUILD_DOCS.md  CHANGELOG.md  CODE_DOCUMENTATION.md  CRITICAL_FIXES_NEEDED.md  ENV_FILE_FIX.md  ERFOLG_FINALE_ZUSAMMENFASSUNG.md  EXTRACTION_COMPLETE.md  EXTRACTION_INSTRUCTIONS.md  EXTRACTION_PREREQUISITES.md  EXTRACTION_VALIDATION_REPORT.md  FEHLER_ANALYSE_UND_FIX_PLAN.md  FINAL_ANALYSE_ZUSAMMENFASSUNG.md  FRONTEND_BACKEND_FIX.md  FRONTEND_FIX.md  FUNKTIONALITÄTS_ANALYSE.md  GITHUB_SETUP.md  INTEGRATION_TEST_RESULTS.md  LICENSE  LIVE_MONITOR.sh  LIVE_MONITORING_GUIDE.md  LLAMATOR_FEATURE_COMPARISON.md  OLLAMA_TEST_ZUSAMMENFASSUNG.md  OPTIMAL_TEST_PROMPT.txt  OPTIMIZATION_PLAN.md  OPTIMIZATION_VALIDATION.md  PAIR_ARCHITEKTUR_ERKLÄRUNG.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3.5_IMPROVEMENTS_SUMMARY.md  (+41 more)
backend/: AKTUELLER_STATUS.md  ERFOLG_ZUSAMMENFASSUNG.md  FIX_VENV_PROBLEM.md  NEXT_STEPS.md  TEST_FIXES_SUMMARY.md  alembic.ini  check_settings.py  check_setup.py  coverage.xml  export_openapi.py  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/.venv-ci/: pyvenv.cfg
backend/.venv-ci311/: pyvenv.cfg
backend/alembic/: env.py
backend/api/: __init__.py  auth.py  debug.py  demo.py  demo_data.py  exceptions.py  experiments.py  rate_limit.py  responses.py  results.py  routes.py  scans.py  telemetry.py  templates.py  vulnerabilities.py  websocket.py
backend/core/: __init__.py  attack_strategies.py  database.py  engine.py  judge.py  models.py  mutator.py  orchestrator.py  orchestrator_requirements.md  (+6 more)
(+316 files in other folders)
