[project]
name = "cerebro-red-v2"
version = "2.0.0"
description = "Autonomous Local LLM Red Teaming Suite - Research Edition"
authors = [
    {name = "Leviticus-Triage", email = "contact@leviticus-triage.org"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["llm", "red-teaming", "security", "adversarial", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "litellm>=1.55.0,<2.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "aiohttp>=3.11.0,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "structlog>=24.4.0,<25.0.0",
    "python-json-logger>=3.2.0,<4.0.0",
    "websockets>=14.0,<15.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

